erDiagram
    vehicle ||..o{ embedded_vehicle_command : "forklift_id (FK 없음)"
    vehicle ||..o| vehicle_fork_current_status : "forklift_id (FK 없음)"
    vehicle ||..o{ embedded_error_history : "forklift_id (FK 없음)"

    vehicle {
        varchar vehicle_id UK
    }
    embedded_vehicle_command {
        bigint   id PK
        varchar  command_id UK
        varchar  forklift_id "idx(forklift_id, issued_at DESC)"
        varchar  command
        varchar  target_system "ROS2 / EMBEDDED / ALL"
        varchar  command_category "MOVE / FORK / LOAD / SAFETY"
        varchar  payload_json "JSON 문자열"
        varchar  reason
        varchar  status
        datetime issued_at
        datetime published_at
        datetime completed_at
        varchar  error_code
        varchar  result_message
        varchar  stopped_actions "쉼표 구분"
        boolean  emergency_stop_applied
        boolean  requires_reset
        datetime created_at
        datetime updated_at
    }
    vehicle_fork_current_status {
        varchar  forklift_id PK
        varchar  fork_state
        boolean  limit_bottom
        varchar  error_code
        datetime message_at
        datetime received_at
        datetime updated_at
    }
    embedded_error_history {
        bigint   id PK
        varchar  forklift_id "idx(forklift_id, occurred_at DESC)"
        varchar  error_code
        varchar  error_source
        varchar  severity
        varchar  message
        datetime occurred_at
        datetime received_at
        datetime created_at
    }
